crates/wn-cli/tests/snapshots/help__help_bench.snap
---
source: crates/wn-cli/tests/help.rs
expression: help(path)
---
Measure hit@k on this repository's own history (default) or on ContextBench

Usage: wn bench [OPTIONS]

Options:
      --history
          Replay this repository's past commits (the default)

      --path <PATH>
          Repository (or any directory inside it)
          
          [default: .]

      --contextbench <DIR>
          Run ContextBench tasks from `<dir>/tasks.jsonl` instead (see benchmarks/contextbench.md)

      --json
          Print JSON instead of text

      --commits <COMMITS>
          Newest eligible commits to score
          
          [default: 300]

      --model <MODEL>
          Model directory (default: `$WN_MODEL_DIR`, else the best installed model)

      --no-daemon
          Answer in this process instead of the background daemon (also `WN_NO_DAEMON=1`)

      --train <TRAIN>
          Earlier commits each adapter is fitted on
          
          [default: 200]

      --any-dir
          Allow a directory outside any git repository, or your home directory or / itself (refused by default: everything under it would be indexed)

      --step <STEP>
          Commits scored per adapter fit
          
          [default: 100]

      --with-tests
          Count test files as gold too

      --no-adapter
          Skip the personal adapter

  -h, --help
          Print help

Replays recent commits as new tasks (query = commit message, candidates = files in the parent
commit, adapter fitted only on earlier commits) and reports hit@1/3/10 and MRR for lexical search,
the model, and the model with this repository's adapter. Read-only.

Examples:
  wn bench                                 the newest 300 eligible commits
  wn bench --commits 1000 --json
  wn bench --contextbench ~/data/contextbench    the public benchmark (see benchmarks/contextbench.md)
