crates/wn-cli/tests/snapshots/help__help_init.snap
---
source: crates/wn-cli/tests/help.rs
expression: help(path)
---
Index the repository and fit its personal adapter from git history

Usage: wn init [OPTIONS]

Options:
      --path <PATH>
          Repository (or any directory inside it)
          
          [default: .]

      --json
          Print JSON instead of text

      --model <MODEL>
          Model directory (default: `$WN_MODEL_DIR`, else the best installed model)

      --no-daemon
          Answer in this process instead of the background daemon (also `WN_NO_DAEMON=1`)

      --any-dir
          Allow a directory outside any git repository, or your home directory or / itself (refused by default: everything under it would be indexed)

      --color <WHEN>
          Color text output: auto (terminal only; honors NO_COLOR and CLICOLOR_FORCE), always or never
          
          [default: auto]
          [possible values: auto, always, never]

  -h, --help
          Print help

Indexes source and config files (untracked included, git-ignored excluded) with the best installed
model, or the lexical fallback when none is installed, then fits the per-repository adapter from
recent commits. Safe to re-run; only changed files are re-embedded. Large repositories take minutes
the first time; progress goes to stderr. Directories outside a git repository, your home directory
and / are refused unless you pass --any-dir.

Examples:
  wn init
  wn --path ~/src/project init
  wn --model ~/models/gemma-xl1 init       use a specific model directory
