crates/wn-cli/tests/snapshots/help__help_setup.snap
---
source: crates/wn-cli/tests/help.rs
expression: help(path)
---
Connect Claude Code, Codex and Cursor so hints reach them automatically (skill + hooks).

Asks first; `wn setup --uninstall` removes everything it added.

Usage: wn setup [OPTIONS]

Options:
      --agent <AGENTS>
          Agents to connect (default: those detected in your home directory)
          
          [possible values: claude, codex, cursor, all]

      --path <PATH>
          Repository (or any directory inside it)
          
          [default: .]

      --json
          Print JSON instead of text

      --project
          Install into this repository (`.claude/`, `.agents/`, `.codex/`, `.cursor/`) instead of your home directory

      --dry-run
          Show what would change without writing anything

      --model <MODEL>
          Model directory (default: `$WN_MODEL_DIR`, else the best installed model)

      --no-daemon
          Answer in this process instead of the background daemon (also `WN_NO_DAEMON=1`)

      --uninstall
          Remove the skill and hooks instead

      --any-dir
          Allow a directory outside any git repository, or your home directory or / itself (refused by default: everything under it would be indexed)

  -y, --yes
          Apply without asking

      --color <WHEN>
          Color text output: auto (terminal only; honors NO_COLOR and CLICOLOR_FORCE), always or never
          
          [default: auto]
          [possible values: auto, always, never]

      --no-hooks
          Only the skill: no hooks

      --from-state
          Re-sync exactly the targets recorded by earlier runs (used by `wn update`)

  -h, --help
          Print help (see a summary with '-h')

Installs, per detected agent, the where-next skill and hooks that add wn's hints to the agent's
context: on every prompt (Claude Code, Codex) and after a search that found nothing or too much
(rg/grep/find/fd, Grep/Glob tools). Shows every file it will write and asks first. Hooks never
block: they answer within 1.5 s or print nothing, and stay silent when wn is unsure, the repository
is not indexed, or WN_HOOKS=0. `wn stats` shows what they did.

Examples:
  wn setup --dry-run                       show what would change, write nothing
  wn setup                                 agents detected in your home directory
  wn setup --agent claude --yes
  wn setup --no-hooks                      only the skill
  wn setup --project                       this repository's .claude/.agents/.codex/.cursor
  wn setup --uninstall                     remove everything wn setup added
